# erllama

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  IOMMAP_PREREQUISITE.md  LICENSE  README.md  ROADMAP.md  UPDATE_LLAMA.md  do_cmake.sh  do_llama.sh  elvis.config  rebar.config
.github/workflows/: ci.yml
apps/erllama/src/: erllama.app.src  erllama_sup.erl
apps/erllama_cache/c_src/: Makefile  crc32c.c  crc32c.h  erllama_kv_nif.c
apps/erllama_cache/include/: erllama_cache.hrl
apps/erllama_cache/src/: erllama_cache.app.src  erllama_cache.erl  erllama_cache_app.erl  erllama_cache_policy.erl  erllama_cache_sup.erl  erllama_kv_nif.erl
apps/erllama_cache/test/: erllama_kv_nif_tests.erl
bench/: README.md  erllama_bench.erl  run.sh
c_src/: CMakeLists.txt  Makefile  crc32c.c  crc32c.h  erllama_nif.c  erllama_safe.cpp
config/: sys.config
guides/: building.md  caching.md  configuration.md  examples.md  loading.md  tool-calls.md
include/: erllama_cache.hrl
internals/: c-safety-audit.md  cache-design.md  nif-safety.md  publish-protocol.md  request-lifecycle.md
src/: erllama.app.src  erllama.erl  erllama_app.erl  erllama_cache.erl  erllama_cache_bench.erl  erllama_cache_counters.erl  erllama_cache_disk_srv.erl  erllama_cache_key.erl  erllama_cache_kvc.erl  erllama_cache_meta_srv.erl  erllama_cache_policy.erl  erllama_cache_ram.erl  erllama_cache_ramfile_srv.erl  erllama_cache_sup.erl  erllama_cache_writer.erl  erllama_inflight.erl  erllama_model.erl  erllama_model_backend.erl  erllama_model_llama.erl  erllama_model_stub.erl  erllama_model_sup.erl  erllama_nif.erl  erllama_pressure.erl  erllama_pressure_nvidia_smi.erl  erllama_pressure_system.erl  erllama_registry.erl  erllama_scheduler.erl  erllama_sup.erl
test/: erllama_SUITE.erl  erllama_cache_counters_tests.erl  erllama_cache_disk_srv_iommap_tests.erl  erllama_cache_disk_srv_tests.erl  erllama_cache_key_tests.erl  erllama_cache_kvc_tests.erl  erllama_cache_meta_srv_tests.erl  erllama_cache_policy_tests.erl  erllama_cache_ram_tests.erl  erllama_cache_ramfile_srv_tests.erl  erllama_cache_writer_tests.erl  erllama_chat_template_tests.erl  erllama_facade_tests.erl  erllama_inflight_tests.erl  erllama_lora_tests.erl  erllama_model_llama_tests.erl  erllama_model_stub_tests.erl  erllama_model_tests.erl  erllama_nif_tests.erl  erllama_real_model_SUITE.erl  erllama_sampler_tests.erl  erllama_scheduler_tests.erl  erllama_streaming_tests.erl  erllama_tests.erl  prop_erllama_cache_kvc.erl  prop_erllama_cache_policy.erl  prop_erllama_nif.erl
